# repairflow

./: .dockerignore  .editorconfig  .env.example  .env.local.example  .gitignore  ANDROID_BUILD.md  BACKUP_RESTORE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_UPDATE_SUMMARY.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  ELECTRON.md  FRONTEND_FIXES_STATUS.md  FRONTEND_FIXES_SUMMARY.md  GITHUB_ACTIONS_FIX.md  LICENSE  OPERATIONS.md  PROJECT_INDEX.md  README.md  RELEASE.md  RELEASE_1.6.1_SUMMARY.md  ROLLBACK.md  SECURITY.md  SECURITY_FIXES_APPLIED.md  SETUP.md  TROUBLESHOOTING.md  VERCEL_DB_FIX.md  VERSIONING.md  WINDOWS_APP_SUMMARY.md  build-output.txt  capacitor.config.ts  dev.db  electron-builder.json  eslint-errors.txt  eslint-report.json  eslint.config.mjs  i18next-scanner.config.js  init-schema.sql  (+10 more)
.agent/: PERFORMANCE_AUDIT_REPORT.md
.cursor/: audit-report.md  commit-analysis.md  workspace.prompts.json
.gemini/: price-adjustment-payments.md
.github/: dependabot.yml  pull_request_template.md
docs/: I18N.md  NOTIFICATIONS.md  ai-vision.md  finance-suppliers.md  printing.md
e2e/: tickets.spec.ts
electron/: main.js  preload.js
load-tests/: README.md  concurrent-users.js  create-ticket.js  file-upload.js  ticket-operations.js
prisma/: schema.postgres.prisma  schema.prisma  seed.ts
public/: index.html
scripts/: auto-translate-ar.ts  (+33 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: filesystem.rs  httpsms.rs  mod.rs  serial.rs
(+473 files in other folders)
